Improve and fix preference system (inheritance, ui, reset fix, cancel fix)